# SVCJ_Factor_Engine

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py  svcj_wrapper.pyx  svcjmath.c  svcjmath.h
.github/workflows/: build_wheels.yml
src/svcj_engine/: _svcj_wrapper.pyx  svc_jcore.c  svc_jcore.h
src/svcj_estimator/: _core.pyx
svcj_engine/: __init__.py  _core.pyx  svcj_wrapper.pyx  svcjmath.c  svcjmath.h
svcj_estimator/: __init__.py  _core.pyx  svcjmath.h
