[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=0.29",
    "numpy>=1.21"  # Ensures numpy headers are available during build
]
build-backend = "setuptools.build_meta"

[project]
name = "svcj_estimator"
version = "0.1.0"
description = "High-performance SVCJ factor generation using C/Cython"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3"
]
requires-python = ">=3.8"