[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "Cython>=0.29.30",
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "svcj_estimator"
version = "0.1.0"
description = "High-performance SVCJ factor engine"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]